k8s/kk-payments-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kk-payments
  namespace: kijani-project

spec:
  type: ClusterIP

  selector:
    app: kk-payments

  ports:
    - port: 80
      targetPort: 80
