k8s/kijani-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kijani-ingress
  namespace: kijani-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  ingressClassName: nginx

  rules:
  - host: kijani.local
    http:
      paths:
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: kk-payments
            port:
              number: 80

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: kk-api
            port:
              number: 8080
